--- a/index.html
+++ b/index.html
@@ -2,45 +2,13 @@
 <html>
   <head>
     <title>Crikipedia</title>
-    <style>
-      input[type='text'] {
-        border-radius: 20px; 
-        width: 100%;
-        font-size: 25px;
-        display: block;
-        padding: 10px;
-        margin: 24px 0;
-        box-shadow: 3px 3px 5px lightgray;
-      }
-      a {
-        background: lightgray;
-        border-radius: 10px;
-        color: rgb(91, 90, 90);
-        font-family: sans-serif;
-        text-decoration: none;
-        padding: 8px 18px;
-        text-align: center;
-        font-size: 20px;
-      }
-
-      a:hover{
-        color:black;
-        border: 1px solid gray;
-      }
-
-      div {
-        margin-left: 20%;
-        margin-right: 20%;
-        text-align: center;
-        margin-top: 8%;    
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/style/style.css"/>
   </head>
   <body>
     <div>
       <img src="logo.png" alt="logo" />
-      <input type="text" name="searchPlayer" />
-      <a href="google.com">Search Player</a>
+      <input class="abcd "type="text" name="searchPlayer" />
+      <a href="player_profile.html">Search Player</a>
     </div>
   </body>
 </html>
