Search is now working

--- a/player_profile.html
+++ b/player_profile.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Virat Kohli - Crikipedia</title>
-    <link rel="stylesheet" type="text/css" href="./style/profile_style.css" />
+    <link rel="stylesheet" type="text/css" href="style/profile_style.css" />
   </head>
 
   <body>
@@ -79,7 +79,7 @@
             </thead>
             <tbody>
               <tr>
-                <td class="label">1000</td>
+                <td class="label">Test</td>
                 <td>1000</td>
                 <td>1000</td>
                 <td>1000</td>
@@ -91,7 +91,7 @@
                 <td>1000</td>
               </tr>
               <tr>
-                <td class="label">1000</td>
+                <td class="label">ODI</td>
                 <td>1000</td>
                 <td>1000</td>
                 <td>1000</td>
@@ -103,7 +103,7 @@
                 <td>1000</td>
               </tr>
               <tr>
-                <td class="label">1000</td>
+                <td class="label">T20I</td>
                 <td>1000</td>
                 <td>1000</td>
                 <td>1000</td>
@@ -115,7 +115,7 @@
                 <td>1000</td>
               </tr>
               <tr>
-                <td class="label">1000</td>
+                <td class="label">FC</td>
                 <td>1000</td>
                 <td>1000</td>
                 <td>1000</td>
@@ -147,7 +147,7 @@
             </thead>
             <tbody>
               <tr>
-                <td class="label">1000</td>
+                <td class="label">Test</td>
                 <td>1000</td>
                 <td>1000</td>
                 <td>1000</td>
@@ -159,7 +159,7 @@
                 <td>1000</td>
               </tr>
               <tr>
-                <td class="label">1000</td>
+                <td class="label">ODI</td>
                 <td>1000</td>
                 <td>1000</td>
                 <td>1000</td>
@@ -171,7 +171,7 @@
                 <td>1000</td>
               </tr>
               <tr>
-                <td class="label">1000</td>
+                <td class="label">T20I</td>
                 <td>1000</td>
                 <td>1000</td>
                 <td>1000</td>
@@ -183,7 +183,7 @@
                 <td>1000</td>
               </tr>
               <tr>
-                <td class="label">1000</td>
+                <td class="label">FC</td>
                 <td>1000</td>
                 <td>1000</td>
                 <td>1000</td>
