--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <title>Crikipedia</title>
-    <link rel="stylesheet" type="text/css" href="/style/style.css"/>
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
   </head>
   <body>
     <div>
-      <img src="logo.png" alt="logo" />
-      <input class="abcd "type="text" name="searchPlayer" />
-      <a href="player_profile.html">Search Player</a>
+      <img src="images/logo.png" alt="logo" />
+      <form method="GET" action="find_player" style="width: 100%">
+        <input type="text" name="player_name" />
+        <input type="submit" name="search_btn" value="Search Player"/>
+      </form>
     </div>
   </body>
 </html>
